--- a/index.html
+++ b/index.html
@@ -1,10 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <!-- Enlaces para implementacion de materialize -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="src/css/stylesheet.css">
+    <title>My-closet</title>
 </head>
-<body>
 
+<body>
+    <div id="panelLogin" class="valign-wrapper">
+        <div class="row center">
+            <!-- <div class="row center"> -->
+            <div class="">
+                <div class="col s12 m12">
+                    <img class=" responsive-img" src="src/img/logo.png" alt="" srcset="">
+                </div>
+                <div id="formularioLogin" class="col s12 m12">
+                    <form action="" method="post" class="col s6 m6 offset-m3 offset-s3">
+                        <label for="correo" class="left black-text flow-text">Correo</label>
+                        <input type="text" name="correo">
+                        <label for="clave" class="left black-text flow-text">Contraseña</label>
+                        <input type="text" name="clave">
+                    </form>
+                    <div class="col s12 m12 section">
+                        <button class="btn waves-effect waves-light" type="submit" name="action">
+                            Submit
+                            <i class="material-icons right">send</i>
+                        </button>
+                    </div>
+                </div>
+                <div class="col s12 m12"><span>¿Aun no tienes cuenta con nosotros? <b>Crea una</b></span></div>
+            </div>
+            <!-- </div> -->
+        </div>
+    </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </body>
+
 </html>
