avance index login

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Enlaces para implementacion de materialize -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
@@ -20,19 +21,29 @@
                 </div>
                 <div id="formularioLogin" class="col s12 m12">
                     <form action="" method="post" class="col s6 m6 offset-m3 offset-s3">
-                        <label for="correo" class="left black-text flow-text">Correo</label>
-                        <input type="text" name="correo">
-                        <label for="clave" class="left black-text flow-text">Contraseña</label>
-                        <input type="text" name="clave">
+                        <div class="section">
+                            <label for="correo" class="left black-text flow-text">Correo</label>
+                            <input type="text" name="correo">
+                        </div>
+                        <div class="section">
+                            <label for="clave" class="left black-text flow-text">Contraseña</label>
+                            <input type="text" name="clave">
+                        </div>
                     </form>
-                    <div class="col s12 m12 section">
-                        <button class="btn waves-effect waves-light" type="submit" name="action">
-                            Submit
-                            <i class="material-icons right">send</i>
-                        </button>
+                    <div class="col s12 m12">
+                        <div class="section">
+                            <button class="btn waves-effect waves-light" type="submit" name="action">
+                                Submit
+                                <i class="material-icons right">send</i>
+                            </button>
+                        </div>
                     </div>
                 </div>
-                <div class="col s12 m12"><span>¿Aun no tienes cuenta con nosotros? <b>Crea una</b></span></div>
+                <div class="col s12 m12">
+                    <div class="section">
+                        <span>¿Aun no tienes cuenta con nosotros? <b>Crea una</b></span>
+                    </div>
+                </div>
             </div>
             <!-- </div> -->
         </div>
