final interfaz login

--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
 <body>
     <div id="panelLogin" class="valign-wrapper">
         <div class="row center">
-            <!-- <div class="row center"> -->
-            <div class="">
+            <div id="cajaBlanca" class="col s8 col offset-s2 card-panel">
                 <div class="col s12 m12">
                     <img class=" responsive-img" src="src/img/logo.png" alt="" srcset="">
                 </div>
@@ -32,8 +31,8 @@
                     </form>
                     <div class="col s12 m12">
                         <div class="section">
-                            <button class="btn waves-effect waves-light" type="submit" name="action">
-                                Submit
+                            <button class="btn-small waves-effect waves-light" type="submit" name="submit">
+                                Entra
                                 <i class="material-icons right">send</i>
                             </button>
                         </div>
@@ -41,13 +40,14 @@
                 </div>
                 <div class="col s12 m12">
                     <div class="section">
-                        <span>¿Aun no tienes cuenta con nosotros? <b>Crea una</b></span>
+                        <span>¿Aun no tienes cuenta con nosotros? <b class="teal-text text-accent-4">Crea una</b></span>
                     </div>
                 </div>
             </div>
-            <!-- </div> -->
         </div>
     </div>
+
+
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </body>
