--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -23,7 +23,7 @@
                         <label for="correo" class="left black-text flow-text">Correo</label>
                         <input type="text" name="correo">
                         <label for="clave" class="left black-text flow-text">Contraseña</label>
-                        <input type="text" name="clave">
+                        <input type="password" name="clave">
                     </form>
                     <div class="col s12 m12 section">
                         <button class="btn waves-effect waves-light" type="submit" name="action">
@@ -32,7 +32,7 @@
                         </button>
                     </div>
                 </div>
-                <div class="col s12 m12"><span>¿Aun no tienes cuenta con nosotros? <b>Crea una</b></span></div>
+                <div class="col s12 m12"><span>¿Aun no tienes cuenta con nosotros? <b>Crear una</b></span></div>
             </div>
             <!-- </div> -->
         </div>
