--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 </div>
                 <div class="col s12 m12">
                     <div class="section">
-                        <span>¿Aun no tienes cuenta con nosotros? <b class="teal-text text-accent-4">Crear una</b></span>
+                        <span>¿Aun no tienes cuenta con nosotros? <b class="teal-text text-accent-4">Crear cuenta</b></span>
                     </div>
                 </div>
             </div>
@@ -48,6 +48,7 @@
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script src="src/js/app.js"></script>
 </body>
 
 </html>
