--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
 <body>
     <div id="panelLogin" class="valign-wrapper">
         <div class="row center">
-            <!-- <div class="row center"> -->
-            <div class="">
+            <div id="cajaBlanca" class="col s8 col offset-s2 card-panel">
                 <div class="col s12 m12">
                     <img class=" responsive-img" src="src/img/logo.png" alt="" srcset="">
                 </div>
@@ -27,23 +26,24 @@
                         </div>
                         <div class="section">
                             <label for="clave" class="left black-text flow-text">Contraseña</label>
-                            <input type="password" name="clave">
+                            <input type="text" name="clave">
                         </div>
                     </form>
-                    <div class="col s12 m12 section">
-                        <button class="btn waves-effect waves-light" type="submit" name="action">
-                            Submit
-                            <i class="material-icons right">send</i>
-                        </button>
+                    <div class="col s12 m12">
+                        <div class="section">
+                            <button class="btn-small waves-effect waves-light" type="submit" name="submit">
+                                Entra
+                                <i class="material-icons right">send</i>
+                            </button>
+                        </div>
                     </div>
                 </div>
                 <div class="col s12 m12">
                     <div class="section">
-                        <span>¿Aun no tienes cuenta con nosotros? <b class="teal-text text-accent-4">Crear cuenta</b></span>
+                        <span>¿Aun no tienes cuenta con nosotros? <b class="teal-text text-accent-4">Crea una</b></span>
                     </div>
                 </div>
             </div>
-            <!-- </div> -->
         </div>
     </div>
 
