--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="src/css/stylesheet.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js%22%3E"> </script>
     <title>My-closet</title>
 </head>
 
@@ -23,11 +24,11 @@
                     <form action="" method="post" class="col s6 m6 offset-m3 offset-s3">
                         <div class="section">
                             <label for="correo" class="left black-text flow-text">Correo</label>
-                            <input type="text" name="correo">
+                            <input type="text" id="correo" name="correo">
                         </div>
                         <div class="section">
                             <label for="clave" class="left black-text flow-text">Contraseña</label>
-                            <input type="password" name="clave">
+                            <input type="password" id="clave" name="clave">
                         </div>
                     </form>
                     <div class="col s12 m12 section">
