--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Enlaces para implementacion de materialize -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="src/css/stylesheet.css">
@@ -22,16 +23,16 @@
                     <form action="" method="post" class="col s6 m6 offset-m3 offset-s3">
                         <div class="section">
                             <label for="correo" class="left black-text flow-text">Correo</label>
-                            <input type="text" name="correo">
+                            <input type="text" id="correo" name="correo">
                         </div>
                         <div class="section">
                             <label for="clave" class="left black-text flow-text">Contraseña</label>
-                            <input type="password" name="clave">
+                            <input type="password" id="clave" name="clave">
                         </div>
                     </form>
                     <div class="col s12 m12">
                         <div class="section">
-                            <button class="btn-small waves-effect waves-light" type="submit" name="submit">
+                            <button class="btn-small waves-effect waves-light" onclick="loginUsuario()" type="submit" name="submit">
                                 Entra
                                 <i class="material-icons right">send</i>
                             </button>
@@ -40,7 +41,7 @@
                 </div>
                 <div class="col s12 m12">
                     <div class="section">
-                        <span>¿Aun no tienes cuenta con nosotros? <b class="teal-text text-accent-4">Crea una</b></span>
+                        <span>¿Aun no tienes cuenta con nosotros? <b class="teal-text text-accent-4">Crear cuenta</b></span>
                     </div>
                 </div>
             </div>
