desarrollo interfaz registro

--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
 </head>
 
 <body>
-    <div id="panelLogin" class="valign-wrapper">
+
+    <!-- Panel de login -->
+    <!--  <div id="panelLogin" class="valign-wrapper">
         <div class="row center">
             <div id="cajaBlanca" class="col s8 col offset-s2 card-panel">
                 <div class="col s12 m12">
-                    <img class=" responsive-img" src="src/img/logo.png" alt="" srcset="">
+                    <img class=" responsive-img" src="src/img/logo.png" alt="logo">
                 </div>
                 <div id="formularioLogin" class="col s12 m12">
                     <form action="" method="post" class="col s6 m6 offset-m3 offset-s3">
@@ -26,7 +28,7 @@
                         </div>
                         <div class="section">
                             <label for="clave" class="left black-text flow-text">Contraseña</label>
-                            <input type="text" name="clave">
+                            <input type="password" name="clave">
                         </div>
                     </form>
                     <div class="col s12 m12">
@@ -40,7 +42,50 @@
                 </div>
                 <div class="col s12 m12">
                     <div class="section">
-                        <span>¿Aun no tienes cuenta con nosotros? <b class="teal-text text-accent-4">Crea una</b></span>
+                        <span>¿Aun no tienes cuenta con nosotros? <b class="teal-text text-accent-4">Crear cuenta</b></span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div> -->
+
+    <!-- Panel de  registro -->
+    <div id="panelRegistro" class="valign-wrapper">
+        <div class="row center">
+            <div id="cajaBlanca2" class="col s8 col offset-s2 card-panel">
+                <div class="col s12 m12">
+                    <img class="responsive-img" src="src/img/logo.png" alt="logo">
+                </div>
+                <div id="formularioLogin2" class="col s12 m12">
+                    <form action="" method="post" class="col s6 m6 offset-m3 offset-s3">
+                        <div class="section">
+                            <label for="" class="left black-text flow-text">Nombre de usuario </label>
+                            <input type="text">
+                        </div>
+                        <div class="section">
+                            <label for="" class="left black-text flow-text">Nombre</label>
+                            <input type="text">
+                        </div>
+                        <div class="section">
+                            <label for="" class="left black-text flow-text">Correo electrónico</label>
+                            <input type="text">
+                        </div>
+                        <div class="section">
+                            <label for="" class="left black-text flow-text">Contraseña</label>
+                            <input type="password">
+                        </div>
+                        <div class="section">
+                            <label for="" class="left black-text flow-text">Repite tu contraseña</label>
+                            <input type="password">
+                        </div>
+                    </form>
+                    <div class="col s12 m12">
+                        <div class="section">
+                            <button class="btn-small waves-effect waves-light valign-wrapper" type="submit" name="submit">
+                                Enviar
+                                <i class="material-icons right">send</i>
+                            </button>
+                        </div>
                     </div>
                 </div>
             </div>
