--- a/index.html
+++ b/index.html
@@ -95,6 +95,14 @@
         </div>
     </div>
 
+    <div id='divMenuPrincipal'>
+        <!-- ... -->
+    </div>
+    
+    <div id='divGestionOutfit'>
+        <!-- ... -->
+    </div>
+    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="src/js/app.js"></script>
 </body>
